Update ffi to 1.0.7; Add Node.js version notice for Windows users

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "author": "Jeremy Faivre <contact@jeremyfa.com>",
     "main": "./bin/index.js",
     "dependencies": {
-        "ffi": "=1.0.1"
+        "ffi": ">=1.0.7"
     },
     "devDependencies": {
         "coffee-script": ">=1.2.0",
